# SDL2-ogu

./: FindSDL2.cmake  README.md  aarch64.cmake  build_sdl2.sh
SDL2-ogu/: FindSDL2.cmake  README.md
SDL2-ogu/projects/helloworld/: createmakefiles.sh  helloworld.c
SDL2-ogu/projects/helloworld/modplay/: mixer.c  mod.c  xm.c
helloworld/: Makefile  helloworld.c
projects/: helloworld.sh
projects/helloworld/: CMakeLists.txt  clean.sh  docmake.sh
projects/helloworld/modplay/: modplay.c  s3m.c
